Allow-list brotli warning after JEP 472 (#288)
This should fix failures due to new warnings coming from the JDK in the
following tests:

- DebugSymbolsTest.debugSymbolsQuarkus
- JFRTest.jfrPerfTest
- RuntimesSmokeTest.quarkusFullMicroProfile

Closes: #284